[package]
name = "ddd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
wax = "0.5"
futures = "0.3"
clap = { version = "3.2", features = ["derive"] }
tokio = { version = "1.20", features = ["fs"] }
actix-multipart = "0.4"
actix-web = "4.1"
