[package]
name = "ddd"
description = "A small service to flash a HTTP passed image onto a disk"
homepage = "https://github.com/jfn-ableton/ddd"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.4"
actix-web = "4.1"
anyhow = "1.0"
async-compression = { version = "0.3", features = ["all"] }
clap = { version = "3.2", features = ["derive"] }
futures = "0.3"
infer = "0.9"
tokio = { version = "1.20", features = ["fs", "sync", "macros", "rt", "rt-multi-thread"] }
wax = "0.5"
